# sarc_archiver

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  archiver_sarc.c  archiver_sarc.h  archiver_sarc_internal.h  custom_stream_standard.c  custom_stream_standard.h  int.h  logging.c  logging.h  main.c  physfs_utils.c  physfs_utils.h  sarc.h  sarc_io.c  sarc_io.h  vmem.c  vmem.h  zstd_io.c  zstd_io.h
