cmake_minimum_required(VERSION 3.16)

project(sarc_archiver LANGUAGES C)

set(CMAKE_C_STANDARD 99)

# Build PhysicsFS without docs, to reduce build time.
set(PHYSFS_BUILD_DOCS FALSE CACHE BOOL "" FORCE)
set(PHYSFS_BUILD_STATIC TRUE CACHE BOOL "" FORCE)
set(PHYSFS_BUILD_SHARED FALSE CACHE BOOL "" FORCE)
set(PHYSFS_BUILD_TEST FALSE CACHE BOOL "" FORCE)

# Disable all the custom archive formats we don't need
set(PHYSFS_ARCHIVE_ZIP FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_7Z FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_GRP FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_WAD FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_MVL FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_HOG FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_SLB FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_VDF FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_QPAK FALSE CACHE BOOL "" FORCE)
set(PHYSFS_ARCHIVE_ISO9660 FALSE CACHE BOOL "" FORCE)

add_subdirectory(src)
add_subdirectory(ext/physfs)

if (EXISTS "data/")
	file(COPY "data/" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src)
endif()

